Rotate on first visit

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -23,3 +23,16 @@
 input, select, textarea{
   color: white;
 }
+
+.LaGirafeLogo {
+  height: 180px;
+  width: 180px;
+  transform: rotateY(560deg);
+  animation: turn 3.5s ease-out forwards 1s;
+}
+
+@keyframes turn {
+  100% {
+    transform: rotateY(0deg);
+  }
+}
